test/2/parse/adjacent-sym-num.err
parse error: test/2/parse/adjacent-sym-num.ploy:1:6-7: adjacent forms require a separating space.
| x = 0a
       ~
